css/mystyles.css
.centerText {
	text-align: center;
}

.hide {
	visibility: hidden;
}

#scrollToTopButton {
	position: fixed;
    bottom: 35px;
    right: 35px;
	
	z-index: 10000;
}

#errorMsg {
	position: fixed;
    bottom: 35px;
    left: 35px;
	width: auto !important;
	
	padding-top: 6px;
	padding-bottom: 6px;
	
	border-width: 2px !important;
	border-color: #eca9a7 !important;
	
	opacity: 0.9;
	pointer-events: none;
	
	z-index: 10000;
}


/* Bootstrap Circular Buttons */
.btn-circle.btn-sm { 
	width: 30px; 
	height: 30px; 
	padding: 6px 0px; 
	border-radius: 15px; 
	font-size: 8px; 
	text-align: center; 
}

.btn-circle.btn-md { 
	width: 50px; 
	height: 50px; 
	padding: 7px 10px; 
	border-radius: 25px; 
	font-size: 10px; 
	text-align: center; 
}

.btn-circle.btn-custom { 
	width: 60px; 
	height: 60px; 
	padding: 7px 10px; 
	border-radius: 30px; 
	font-size: 24px; 
	text-align: center; 
}

.btn-circle.btn-xl { 
	width: 70px; 
	height: 70px; 
	padding: 10px 16px; 
	border-radius: 35px; 
	font-size: 12px; 
	text-align: center; 
}

